llvm/test/MC/EraVM/asm-parser/misc-operands-errors.s
; RUN: not llvm-mc -triple eravm -o - < %s 2>&1 > %t.stdout | FileCheck %s
; RUN: FileCheck --check-prefix=STDOUT %s < %t.stdout

; STDOUT:     .text
; STDOUT-NOT: {{.+}}

; reject integer literals as immediate jump targets
  jump 42
  near_call r1, 42
  near_call r1, @foo, 42
  far_call r1, r2, 42

; COM: Autogenerated checks below, see README.md.
; CHECK:       <stdin>:{{[0-9]+}}:8: error: cannot parse operand
; CHECK-NEXT:    jump 42
; CHECK-NEXT:         ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    near_call r1, 42
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:23: error: cannot parse operand
; CHECK-NEXT:    near_call r1, @foo, 42
; CHECK-NEXT:                        ^
; CHECK:       <stdin>:{{[0-9]+}}:20: error: cannot parse operand
; CHECK-NEXT:    far_call r1, r2, 42
; CHECK-NEXT:                     ^
